fixing support for multiple dns

--- a/templates/ejabberd.cfg.erb
+++ b/templates/ejabberd.cfg.erb
@@ -58,11 +58,7 @@ override_global.
 {acl, admin, {user, "admin"}}.
 
 %% Hostname
-{hosts, [
-	<% @domains.each do |domain| -%>
-	"<%= domain %>",
-	<% end -%>
-]}.
+{hosts, [<%= @domains %>]}.
 
 
 
