fout in config file

--- a/templates/ejabberd.cfg.erb
+++ b/templates/ejabberd.cfg.erb
@@ -499,7 +499,7 @@ override_global.
 % be able to change their password as well as register).
 % This setting is default because it's more safe.
 {access, register, [{allow, all}]}.
-{registration_timeout, infinity}
+{registration_timeout, infinity}.
 
 %% By default frequency of account registrations from the same IP
 %% is limited to 1 account every 10 minutes. To disable put: infinity
